--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "1c060319-a3bd-47b0-ac59-14afcb7a93f6",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,9 @@
     "from sklearn.utils import resample\n",
     "import statsmodels.api as sm\n",
     "from scipy import stats\n",
-    "from sklearn.linear_model import LogisticRegression"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from statsmodels.stats.diagnostic import het_breuschpagan\n",
+    "from statsmodels.stats.stattools import durbin_watson"
    ]
   },
   {
@@ -835,6 +837,115 @@
     "pseudo_r2 = 1 - (log_likelihood_model / log_likelihood_null)\n",
     "print(f\"McFadden's Pseudo-R²: {pseudo_r2}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea5688fc-a374-4561-8f2d-e87200c18679",
+   "metadata": {},
+   "source": [
+    "### Asumsi Klasik"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "77493a74-c8b6-4ef3-a610-4b1c591cd0ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_prob = logit_model.predict_proba(X_scaled)\n",
+    "y_pred = np.argmax(y_pred_prob, axis=1)\n",
+    "residuals = (y_pred != y).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c843c86-f60f-4b3e-ad85-5e1ec14d7441",
+   "metadata": {},
+   "source": [
+    "#### Uji Homoskedastisitas (Breusch-Pagan Test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8b110d75-ecdd-448e-b29b-faeaed758cb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uji Breusch-Pagan untuk Homoskedastisitas\n",
+      "Lagrange Multiplier (LM) Stat: 6.621765835266791\n",
+      "p-value: 0.760604663470878\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_const = sm.add_constant(X_scaled) \n",
+    "bp_test = het_breuschpagan(residuals, X_const)\n",
+    "\n",
+    "print(\"Uji Breusch-Pagan untuk Homoskedastisitas\")\n",
+    "print(\"Lagrange Multiplier (LM) Stat:\", bp_test[0])\n",
+    "print(\"p-value:\", bp_test[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3586cebf-7ada-42f4-9f79-d118d745c1c3",
+   "metadata": {},
+   "source": [
+    "* **H₀**: Tidak ada heteroskedastisitas (peubah error memiliki varians yang konstan, atau homoskedastisitas).\n",
+    "\n",
+    "  (\\$ \\text{Var}(\\epsilon_i) = \\sigma^2 \\quad \\forall i\n",
+    "  $\\)\n",
+    "\n",
+    "* **H₁**: Terdapat heteroskedastisitas (peubah error memiliki varians yang tidak konstan).\n",
+    "\n",
+    "  [\n",
+    "  \\text{Var}(\\epsilon_i) \\neq \\sigma^2 \\quad \\text{untuk beberapa nilai } i\n",
+    "  ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fe9afb2-07c5-49f6-b7e2-0f599e17366f",
+   "metadata": {},
+   "source": [
+    "#### Uji Autokorelasi Residual (Durbin-Watson Test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "070642cc-7e17-4a32-bd81-f18e02a96f60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Durbin-Watson Test untuk Autokorelasi Residual\n",
+      "Statistik Durbin-Watson: 0.21052631578947367\n"
+     ]
+    }
+   ],
+   "source": [
+    "dw_stat = durbin_watson(residuals)\n",
+    "\n",
+    "print(\"\\nDurbin-Watson Test untuk Autokorelasi Residual\")\n",
+    "print(\"Statistik Durbin-Watson:\", dw_stat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d791e95-fda2-4ef6-9918-d89e6c6cff24",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
